# django-organizations

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CHANGELOG  CONTRIBUTING.md  CONTRIBUTING.rst  CONTRIBUTORS.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  conftest.py  manage.py  noxfile.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  requirements_dev.txt  runtests.py  runtests.sh  setup.cfg  setup.py  tox.ini
.github/workflows/: lint.yml  release.yml  test.yml
accounts/: admin.py  decorators.py  exceptions.py  forms.py  managers.py  mixins.py  models.py  urls.py  utils.py  views.py
accounts/invitations/: backends.py  forms.py  urls.py  views.py
accounts/templates/: account_base.html
accounts/templates/accounts/: account_confirm_delete.html  account_detail.html  account_form.html  account_list.html  accountuser_confirm_delete.html  accountuser_detail.html  accountuser_form.html  accountuser_list.html  accountuser_remind.html  accoutuser_form.html  login.html
accounts/urls/: __init__.py  base.py  default.py
accounts/views/: __init__.py  auth.py  base.py  controlled.py  mixins.py
docs/: Makefile  backends.rst  basic_usage.rst  conf.py  cookbook.rst  custom_usage.rst  getting_started.rst  index.rst  install.rst  installation.rst  overview.rst  requirements.txt  signals.rst  usage.rst
docs/reference/: backends.rst  forms.rst  index.rst  managers.rst  mixins.rst  models.rst  settings.rst  views.rst
example/: manage.py  orgs.json
example/accounts/: admin.py  models.py
example/accounts/migrations/: 0001_initial.py
example/conf/: settings.py  urls.py  wsgi.py
example/grouptest/: settings.py  urls.py  wsgi.py
example/vendors/: admin.py  models.py
example/vendors/migrations/: 0001_initial.py
example/vendors/south_migrations/: 0001_initial.py
examples/abstract_organizations/accounts/: admin.py
examples/abstract_organizations/conf/: urls.py
examples/abstract_organizations/templates/: site_base.html
examples/abstract_organizations/vendors/: admin.py
examples/concrete_organization/: README.rst  manage.py
examples/concrete_organization/conf/: asgi.py  settings.py  urls.py  wsgi.py
examples/concrete_organization/teams/: admin.py  apps.py  models.py  tests.py
organizations/: __init__.py  abstract.py  admin.py  app_settings.py  apps.py  base.py  base_admin.py  compat.py  exceptions.py  fields.py  forms.py  managers.py  mixins.py  models.py  signals.py  urls.py  utils.py  views.py
organizations/backends/: __init__.py  defaults.py  forms.py  modeled.py  tokens.py
organizations/fixtures/: orgs.json  users.json
organizations/invitations/: forms.py  tokens.py  urls.py  views.py
organizations/migrations/: 0001_initial.py  0002_auto_20151005_1823.py  0002_auto__chg_field_organization_name__chg_field_organization_slug.py  0002_model_update.py  0003_auto__chg_field_organization_created__chg_field_organization_modified_.py  0003_field_fix_and_editable.py  0004_auto__chg_field_organization_name__chg_field_organization_slug.py  0004_organizationinvitation.py
organizations/south_migrations/: 0001_initial.py  0003_auto__chg_field_organization_created__chg_field_organization_modified_.py
organizations/templates/: organizations_base.html
organizations/templates/organizations/: invitation_body.html  invitation_join.html  invitation_register.html  login.html  organization_confirm_delete.html  organization_detail.html  organization_form.html  organization_list.html  organization_users.html  organizationuser_detail.html  organizationuser_form.html  organizationuser_list.html  register_form.html  register_success.html
organizations/templatetags/: __init__.py  org_filters.py  org_tags.py
organizations/tests/: __init__.py  test_backends.py  test_base.py  test_forms.py  test_managers.py  test_mixins.py  test_models.py  test_utils.py  utils.py
organizations/views/: __init__.py  base.py  default.py  mixins.py
src/organizations/: __init__.py  abstract.py  admin.py  app_settings.py  apps.py  base.py  base_admin.py  exceptions.py  fields.py  forms.py  managers.py  models.py  signals.py  urls.py  utils.py
src/organizations/backends/: __init__.py  defaults.py  forms.py  modeled.py
src/organizations/migrations/: 0001_initial.py  0002_model_update.py  0003_field_fix_and_editable.py  0004_organizationinvitation.py  (+2 more)
test_abstract/: models.py
test_abstract/migrations/: 0001_initial.py  0002_custominvitation.py  0003_alter_custominvitation_invited_by_and_more.py  0004_alter_customorganization_slug.py  0005_alter_custominvitation_id_and_more.py  0005_alter_custominvitation_invitee_identifier_and_more.py
test_accounts/: admin.py  backends.py  models.py  urls.py
test_accounts/migrations/: 0001_initial.py  0002_model_update.py  0003_accountinvitation.py  0004_alter_account_users_and_more.py  0005_alter_account_id_alter_accountinvitation_id_and_more.py  0005_alter_account_is_active_alter_account_name_and_more.py
test_accounts/south_migrations/: 0001_initial.py
test_custom/: models.py
test_custom/migrations/: 0001_initial.py  0002_model_update.py
test_vendors/: models.py
test_vendors/migrations/: 0001_initial.py  0002_model_update.py  0003_vendorinvitation.py  0004_alter_vendor_users_alter_vendorinvitation_invited_by_and_more.py  0005_alter_vendor_id_alter_vendorinvitation_id_and_more.py  0005_alter_vendor_is_active_alter_vendor_name_and_more.py
test_vendors/south_migrations/: 0001_initial.py
tests/: runtests.py  settings.py  test_async.py  test_backends.py  test_base.py  test_fields.py  test_forms.py  test_migrations.py  test_mixins.py  test_models.py  test_signals.py  test_templatetags.py  test_utils.py  test_views.py  tests.py  urls.py  utils.py
tests/backends/: __init__.py  test_default_backend.py  test_model_based_backend.py
tests/fixtures/: users.json
tests/templates/: site_base.html
tests/test_app/: doctests.txt
tests/tests/: __init__.py  base.py  forms.py  models.py  testing_utils.py  urls.py  views.py
(+31 files in other folders)
