[project]
name = "django-organizations"
authors = [
  { name="Ben Lopatin", email="ben@benlopatin.com" },
]
description = "Group accounts for Django"
readme = "README.rst"
requires-python = ">=3.9"
license = {text = "BSD License"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "Django>=3.2",
    "django-extensions>=2.0.8",
]
dynamic = ["version"]

[project.urls]
"Source" = "https://github.com/bennylope/django-organizations"
"Issues" = "https://github.com/bennylope/django-organizations/issues"
"Documentation" = "https://django-organizations.readthedocs.io/en/latest/"

[project.optional-dependencies]
tests = [
    "pytest>=6.0",
    "coverage",
    "pytest-django>=3.0.0",
    "pytest-cov>=2.4.0",
    # Required to test default models
    "django-extensions>=2.0.8",
    "django-autoslug>=1.9.8,",
    # Required for mocking signals
    "mock-django==0.6.9",
]
docs = [
    "Sphinx==7.2.6",
    "furo==2023.9.10",
]
linting = [
    "ruff",
    "isort",
]
dev = [
    "django-organizations[tests,linting]",
    "tox",
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]
directory = "dist/"

[tool.hatch.version]
path = "src/organizations/__init__.py"

[tool.hatch.build.targets.wheel]
only-include = ["src/organizations"]
packages = ["src/oranizations"]

[tool.black]
target-version = ["py311"]

[tool.isort]
line_length = 88
force_single_line = true
known_future_library = "future"
known_django = "django"
known_first_party = ["organizations"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
skip_glob = ["**/__init__.py", "*/__init__.py"]
